Add workflow_dispatch trigger to main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,7 @@ env:
 
 
 on:
+  workflow_dispatch:
   # Only run this workflow when a release is published.
   # To modify this workflow when other events occur, see:
   #   - https://docs.github.com/en/actions/using-workflows/triggering-a-workflow
