--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,11 +45,16 @@ env:
 
   # The URL to the module archive associated with the module release being
   # processed by this workflow.
-  release_module_url: "https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.zip"
+  release_module_url: "https://github.com/${{github.repository}}/releases/download/${{ github.event.release.tag_name || inputs.tag_name }}/module.zip"
 
 
 on:
   workflow_dispatch:
+    inputs:
+      tag_name:
+        description: 'Release tag name (e.g., v1.0.0)'
+        required: true
+        type: string
   # Only run this workflow when a release is published.
   # To modify this workflow when other events occur, see:
   #   - https://docs.github.com/en/actions/using-workflows/triggering-a-workflow
@@ -70,8 +75,27 @@ jobs:
       contents: write
 
     steps:
+      - name: Fetch Release Info for Tag
+        if: github.event_name == 'workflow_dispatch'
+        id: release_info
+        run: |
+          RELEASE_DATA=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ inputs.tag_name }}")
+          
+          # Check if release exists
+          if echo "$RELEASE_DATA" | jq -e '.message == "Not Found"' > /dev/null; then
+            echo "Error: No release found for tag ${{ inputs.tag_name }}"
+            exit 1
+          fi
+          
+          echo "name=$(echo $RELEASE_DATA | jq -r .name)" >> $GITHUB_OUTPUT
+          echo "body=$(echo $RELEASE_DATA | jq -r .body)" >> $GITHUB_OUTPUT
+          echo "prerelease=$(echo $RELEASE_DATA | jq -r .prerelease)" >> $GITHUB_OUTPUT
+
       - name: Checkout Repository
         uses: actions/checkout@v5
+        with:
+          ref: ${{ github.event.release.tag_name || inputs.tag_name }}
 
 
       # Extract version embedded in the tag.
@@ -84,6 +108,8 @@ jobs:
       - name: Extract Version From Tag
         id: get_version
         uses: battila7/get-version-action@v2
+        with:
+          tag: ${{ github.event.release.tag_name || inputs.tag_name }}
 
 
       # Modify "module.json" with values specific to the release.
@@ -137,10 +163,10 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
-          name: ${{ github.event.release.name }}
-          draft: ${{ github.event.release.unpublished }}
-          prerelease: ${{ github.event.release.prerelease }}
+          name: ${{ github.event.release.name || steps.release_info.outputs.name }}
+          draft: false
+          prerelease: ${{ github.event.release.prerelease || steps.release_info.outputs.prerelease }}
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: './module.json, ./module.zip'
-          tag: ${{ github.event.release.tag_name }}
-          body: ${{ github.event.release.body }}
+          tag: ${{ github.event.release.tag_name || inputs.tag_name }}
+          body: ${{ github.event.release.body || steps.release_info.outputs.body }}
