--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -120,14 +120,14 @@ jobs:
       # commited to the repository, and only exist in the action's filesystem.
       - name: Modify Module Manifest With Release-Specific Values
         id: sub_manifest_link_version
-        uses: cschleiden/replace-tokens@v1
-        with:
-          files: 'module.json'
-        env:
-          VERSION: ${{steps.get_version.outputs.version-without-v}}
-          URL: ${{ env.project_url }}
-          MANIFEST: ${{ env.latest_manifest_url }}
-          DOWNLOAD: ${{ env.release_module_url }}
+        run: |
+          jq --arg version "${{steps.get_version.outputs.version-without-v}}" \
+             --arg url "${{ env.project_url }}" \
+             --arg manifest "${{ env.latest_manifest_url }}" \
+             --arg download "${{ env.release_module_url }}" \
+             '.version = $version | .url = $url | .manifest = $manifest | .download = $download' \
+             module.json > module.json.tmp
+          mv module.json.tmp module.json
 
 
       # Create a "module.zip" archive containing all the module's required files.
